--- a/plantilla/src/theme/variables.scss
+++ b/plantilla/src/theme/variables.scss
@@ -3,6 +3,7 @@
 
 /*--------------------------------------------------------------------- import Fonts ---------------------------------------------------------------------*/
 
+
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
 * {
@@ -89,7 +90,7 @@ h4 a,
 h5 a,
 h6 a {
   color: #212121;
-  text-decoration: none!important;
+  text-decoration: none !important;
   opacity: 1
 }
 
@@ -196,6 +197,7 @@ button {
 .header_section {
   width: 100%;
   float: left;
+  background-image: url(../images/banner-bg.png);
   height: auto;
   background-size: 100%;
   padding: 10px 0px 25px 0px;
@@ -217,14 +219,20 @@ button {
   color: #272a2a;
   font-size: 18px;
 }
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
   color: #15e4d0;
 }
 
 .navbar {
   padding: .5rem 70px;
 }
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show>.nav-link {
   color: #15e4d0;
 }
 
@@ -475,6 +483,7 @@ button {
 .knowledge_section {
   width: 100%;
   float: left;
+  background-image: url(../images/knowledge-bg.png);
   background-size: 100%;
   height: auto;
   background-repeat: no-repeat;
@@ -537,12 +546,13 @@ button {
 
 @keyframes fadeEffect {
   0% {
-      transform: translate(-50%, -50%) scale(1);
-      opacity: 1
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1
   }
+
   100% {
-      transform: translate(-50%, -50%) scale(1.2);
-      opacity: 0;
+    transform: translate(-50%, -50%) scale(1.2);
+    opacity: 0;
   }
 }
 
@@ -629,6 +639,7 @@ button {
 .contact_section {
   width: 100%;
   float: left;
+  background-image: url(../images/contact-bg.png);
   background-size: 100%;
   background-repeat: no-repeat;
   padding-bottom: 150px;
