--- a/plantilla/src/theme/variables.scss
+++ b/plantilla/src/theme/variables.scss
@@ -196,6 +196,7 @@ button {
 .header_section {
   width: 100%;
   float: left;
+  background-image: url(../../../images/banner-bg.png);
   height: auto;
   background-size: 100%;
   padding: 10px 0px 25px 0px;
@@ -475,6 +476,7 @@ button {
 .knowledge_section {
   width: 100%;
   float: left;
+  background-image: url(../../../images/knowledge-bg.png);
   background-size: 100%;
   height: auto;
   background-repeat: no-repeat;
@@ -629,6 +631,7 @@ button {
 .contact_section {
   width: 100%;
   float: left;
+  background-image: url(../../../images/contact-bg.png);
   background-size: 100%;
   background-repeat: no-repeat;
   padding-bottom: 150px;
