--- a/tatewari/src/app/pages/tab2/tab2.page.html
+++ b/tatewari/src/app/pages/tab2/tab2.page.html
@@ -13,12 +13,16 @@
     </ion-toolbar>
   </ion-header>
   <ion-item>
-    <ion-label position="floating">id_user</ion-label>
-    <ion-input type="number" [(ngModel)]="id_user"></ion-input>
+    <ion-label position="floating"> id_user</ion-label>
+    <ion-input type="text" [(ngModel)]="id_user"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">name</ion-label>
+    <ion-label position="floating"> name</ion-label>
     <ion-input type="text" [(ngModel)]="name"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">password</ion-label>
+    <ion-input type="text" [(ngModel)]="password"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">email</ion-label>
