--- a/tatewari/src/app/tab1/tab1.page.html
+++ b/tatewari/src/app/tab1/tab1.page.html
@@ -1,25 +1,31 @@
 <ion-content [fullscreen]="true">
-<ion-header collapse="condense">
-  <ion-toolbar>
-    <ion-title size="large">Tab 1</ion-title>
-  </ion-toolbar>
-</ion-header>
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Tab 1</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-grid>
-  <ion-row>
-    <ion-col *ngFor="let item of resp">
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>{{ item.id_user }}</ion-card-title>
-          <ion-button (click)="item.id_entrada !== undefined && eliminarDato(item.id_entrada)" shape="round-10" fill="clear"> <ion-icon slot="icon-only"  name="trash-outline"></ion-icon></ion-button>
-        </ion-card-header>
-        <ion-card-content>
-          <p>Id usuario {{ item.id_user }}</p>
-          <p>Titulo {{ item.name }}</p>
-          <p>Contenido {{ item.email }}</p>
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let item of resp">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{ item.id_user }}</ion-card-title>
+            <ion-button
+              (click)="item.id_entrada !== undefined && eliminarDato(item.id_entrada)"
+              shape="round-10"
+              fill="clear"
+            >
+              <ion-icon slot="icon-only" name="trash-outline"></ion-icon
+            ></ion-button>
+          </ion-card-header>
+          <ion-card-content>
+            <p>Id usuario {{ item.id_user }}</p>
+            <p>Titulo {{ item.name }}</p>
+            <p>Contenido {{ item.email }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
