--- a/tatewari/src/app/tab2/tab2.page.html
+++ b/tatewari/src/app/tab2/tab2.page.html
@@ -9,9 +9,24 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">sexito</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-item>
+    <ion-label position="floating">id_user</ion-label>
+    <ion-input type="number" [(ngModel)]="id_user"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">name</ion-label>
+    <ion-input type="text" [(ngModel)]="name"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">email</ion-label>
+    <ion-input type="text" [(ngModel)]="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">password</ion-label>
+    <ion-input type="text" [(ngModel)]="password"></ion-input>
+  </ion-item>
+  <ion-button expand="block" (click)="enviarDatos()">Enviar</ion-button>
 </ion-content>
