--- a/tatewari/src/app/pages/tab2/tab2.page.html
+++ b/tatewari/src/app/pages/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Postea cosas we
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Postea cosas we</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-item>
@@ -17,12 +17,12 @@
     <ion-input type="text" [(ngModel)]="name"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">password</ion-label>
-    <ion-input type="text" [(ngModel)]="password"></ion-input>
-  </ion-item>
-  <ion-item>
     <ion-label position="floating">email</ion-label>
     <ion-input type="text" [(ngModel)]="email"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">password</ion-label>
+    <ion-input type="text" [(ngModel)]="password"></ion-input>
   </ion-item>
   <ion-button expand="block" (click)="enviarDatos()">Enviar</ion-button>
 </ion-content>
