--- a/tatewari/src/app/pages/tab3/tab3.page.html
+++ b/tatewari/src/app/pages/tab3/tab3.page.html
@@ -16,6 +16,6 @@
     <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
-
   <ion-button expand="block" (click)="login()">Iniciar sesión</ion-button>
+  <ion-button (click)="nextpage()">Registrarse</ion-button>
 </ion-content>
