--- a/tatewari/src/app/pages/tab3/tab3.page.html
+++ b/tatewari/src/app/pages/tab3/tab3.page.html
@@ -17,5 +17,5 @@
     <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
   <ion-button expand="block" (click)="login()">Iniciar sesión</ion-button>
-  <ion-button (click)="nextpage()">Registrarse</ion-button>
+  <ion-button (click)="nextpage()">Home</ion-button>
 </ion-content>
