--- a/tatewari/src/app/pages/login/login.page.html
+++ b/tatewari/src/app/pages/login/login.page.html
@@ -1,25 +1,47 @@
-<ion-content>
-  
-  <div class="cont">
-    <!--app-toolbar></app-toolbar-->
-    <ion-row class="header">
-      <div class="iconos">
-        <a class="back" href="/tabs/tab1"> <ion-icon name="arrow-back"></ion-icon> </a>
-        <a class="enviar" expand="block" href="/registro">Registro</a>
-      </div>
-      <ion-title size="large">Iniciar <br> Sesion</ion-title>
-    </ion-row>
-    <ion-row class="form" justify-content-center  (ngSubmit)="login()">
-      <ion-grid class="login" >
-        <input type="email" placeholder="Email"  name="user" [(ngModel)]='email'>
-        <input type="password" placeholder="Contraseña" name="password" [(ngModel)]='password'>
-
-        <a>¿Olvidaste tu Contraseña?</a>
-
-        <input type="submit" value="Entrar" (click)="login()">
-              
+<ion-content class="login-content" fullscreen="true">
+  <div class="login-container">
+    <div class="header">
+      <ion-row class="iconos">
+        <ion-col size="auto">
+          <a class="back" routerLink="/tabs/tab1">
+            <ion-icon name="arrow-back"></ion-icon>
+          </a>
+        </ion-col>
+        <ion-col size="auto">
+          <a class="enviar" routerLink="/register">Registro</a>
+        </ion-col>
+      </ion-row>
+      <ion-title size="large">Iniciar Sesión</ion-title>
+    </div>
+    <form class="form" (ngSubmit)="login()">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Email</ion-label>
+              <ion-input type="email" name="email" [(ngModel)]="email" required></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Contraseña</ion-label>
+              <ion-input type="password" name="password" [(ngModel)]="password" required></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="forgot-password">
+            <a>¿Olvidaste tu Contraseña?</a>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-button type="submit" expand="block" color="primary">Entrar</ion-button>
+          </ion-col>
+        </ion-row>
       </ion-grid>
-    </ion-row>
-    
+    </form>
   </div>
 </ion-content>
