--- a/tatewari/src/app/pages/login/login.page.scss
+++ b/tatewari/src/app/pages/login/login.page.scss
@@ -1,36 +1,51 @@
-.small-text {
-    text-decoration: none;
-    display: block;
-    font-size: 14px;
-    text-align: center;
-    margin-top: 10px;
+.login-content {
+  --background: #95e7f8; // Color de fondo
 }
 
-.divider {
-    display: flex;
-    
-    &:before,
-    &:after {
-      content: "";
-      flex: 1;
-    }
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 20px;
 }
-  
-.line {
-    align-items: center;
-    margin: 1em -1em;
-    color: #cccccc;
-    
-    &:before,
-    &:after {
-      height: 1px;
-      margin: 0 1em;
-    }
-} 
 
-.one-line {
-    &:before,
-    &:after {
-       background: #cccccc;
-    }
+.header {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.iconos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.back {
+  color: #5e81ac; // Color de los íconos y enlaces
+}
+
+.enviar {
+  color: #5e81ac; // Color de los íconos y enlaces
+}
+
+.form {
+  width: 100%;
+}
+
+.forgot-password {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+ion-input {
+  --border-color: #5e81ac; // Color del borde de los inputs
+  --highlight-color-focused: #88c0d0; // Color del resplandor cuando el input está enfocado
+}
+
+ion-button {
+  --background: #88c0d0; // Color de fondo del botón
+  --color: #fff; // Color del texto del botón
 }
