--- a/tatewari/src/app/register/register.page.html
+++ b/tatewari/src/app/register/register.page.html
@@ -1,30 +1,12 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Registro</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-row class="form" justify-content-center  (ngSubmit)="signup()">
+  <ion-grid class="login" >
+    <input type="email" placeholder="name" [(ngModel)]='name' id="name" name="name" required>
+    <input type="email" placeholder="email"  name="user" [(ngModel)]='email'>
+    <input type="password" placeholder="password" name="password" [(ngModel)]='password'>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Registro</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <a>¿Olvidaste tu Contraseña?</a>
 
-  <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
-    <ion-input type="text" [(ngModel)]="name"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">Correo electrónico</ion-label>
-    <ion-input type="email" [(ngModel)]="email"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="password" [(ngModel)]="password"></ion-input>
-  </ion-item>
-
-  <ion-button expand="block" (click)="register()">Registrarse</ion-button>
-</ion-content>
+    <input type="submit" value="Entrar" (click)="signup()">
+          
+  </ion-grid>
+</ion-row>
